fix card spacing

--- a/src/sass/1-custom-styles/_space.scss
+++ b/src/sass/1-custom-styles/_space.scss
@@ -128,7 +128,7 @@ html {
   --ui-h-md: 2rem;     /* 32px */
   --ui-h-lg: 2.5rem;   /* 40px */
 
-  @include bp.bp(xs) {
+  @include bp.bp(sm) {
     --ui-h-sm: 1.75rem; /* 28px */
     --ui-h-md: 2.25rem; /* 36px */
     --ui-h-lg: 2.75rem; /* 44px */
@@ -136,10 +136,6 @@ html {
 
   @include bp.bp(md) {
     --moat: 2rem;
-
-    --ui-h-sm: 1.875rem; /* 30px */
-    --ui-h-md: 2.5rem;   /* 40px */
-    --ui-h-lg: 3rem;     /* 48px */
   }
 }
 
@@ -160,12 +156,6 @@ html {
 .w-md { width: var(--max-w-md); }
 .w-lg { width: var(--max-w-lg); }
 .w-xl { width: var(--max-w-xl); }
-
-// .max-w-xs { max-width: var(--max-w-xs); }
-// .max-w-sm { width: min(100%, var(--max-w-sm)); }
-// .max-w-md { width: min(100%, var(--max-w-md)); }
-// .max-w-lg { width: min(100%, var(--max-w-lg)); }
-// .max-w-xl { max-width: 100%; width: var(--max-w-xl); }
 
 /* Moat classes */
 /* ================================================== */
@@ -410,6 +400,23 @@ html {
     --space: var(--3xl);
   }
 }
+
+.space-md-2xl {
+  --space: var(--md);
+
+  @include bp.bp(xs) {
+    --space: var(--lg);
+  }
+
+  @include bp.bp(sm) {
+    --space: var(--xl);
+  }
+
+  @include bp.bp(lg) {
+    --space: var(--2xl);
+  }
+}
+
 
 .space-lg-3xl {
   display: grid;
