--- a/src/sass/4-components/_button.scss
+++ b/src/sass/4-components/_button.scss
@@ -214,13 +214,13 @@
 /* ================================================== */
 .btn-secondary {
   @include btn-skin;
-  --btn-bg: oklch(var(--primary-70) / 0.25);
+  --btn-bg: oklch(var(--primary-70) / 0.1);
   --btn-text: var(--color-white);
   @include glass.glass-filter(10px, 1, 2.5);
 
   &:hover {
-    --btn-bg: oklch(var(--primary-70) / 0.4);
-    @include glass.glass-filter(10px, 1.25, 1.5);
+    --btn-bg: oklch(var(--primary-80) / 0.2);
+    @include glass.glass-filter(10px, 1.3, 2.5);
   }
 }
 
