--- a/src/sass/4-components/_card.scss
+++ b/src/sass/4-components/_card.scss
@@ -100,7 +100,7 @@
   width: 100%;
   // height: fit-content;
   display: grid;
-  place-items: center;
+  // place-items: center;
   gap: var(--_space);
   padding: var(--_space);
   box-shadow: var(--sha-sm);
@@ -250,7 +250,7 @@
 @mixin card-title {
   font-family: $font-family-title;
   letter-spacing: $letter-spacing-md;
-  line-height: 1.1;
+  line-height: 1.2;
   color: var(--text-xstrong);
   text-align: center;
 }
@@ -359,17 +359,17 @@ width: calc(100% + var(--_space) * 2);
   }
 
   .card-title-lg {
-    font-size: var(--text-xl);
+    font-size: var(--text-2xl);
     text-shadow: var(--text-sha-xl);
   }
 
   .card-title-md {
-    font-size: var(--text-lg);
+    font-size: var(--text-xl);
     text-shadow: var(--text-sha-lg);
   }
 
   .card-subtitle {
-    font-size: var(--text-xs);
+    font-size: var(--text-sm);
     text-shadow: var(--text-sha-xs);
   }
 }
@@ -397,7 +397,7 @@ width: calc(100% + var(--_space) * 2);
   }
 }
 
-@container (600px < width <= 800px ) {
+@container (600px < width < 800px ) {
   .card-q {
     @include radius("md");
     // --space: var(--lg);
@@ -405,8 +405,8 @@ width: calc(100% + var(--_space) * 2);
   }
 
   .card-title-lg {
-    font-size: var(--text-3xl);
-    text-shadow: var(--text-sha-3xl);
+    font-size: var(--text-2xl);
+    text-shadow: var(--text-sha-2xl);
   }
 
   .card-title-md {
@@ -420,17 +420,18 @@ width: calc(100% + var(--_space) * 2);
   }
 }
 
-@container (width > 800px ) {
+@container (width >= 800px ) {
   .card-q {
-    @include radius("md-lg");
+    @include radius("lg");
     // --space: var(--xl);
     // background-color: rgba(0, 33, 220, 0.5);
   }
 
   .card-title-lg {
-    font-size: var(--text-3xl);
-    text-shadow: var(--text-sha-3xl);
+    font-size: var(--text-2xl);
+    text-shadow: var(--text-sha-2xl);
   }
+
 
   .card-title-md {
     font-size: var(--text-2xl);
@@ -451,10 +452,3 @@ width: calc(100% + var(--_space) * 2);
     // box-shadow: var(--flat-inset-lg);
   }
 }
-
-
-  // @container (width < 96vw ) {
-  //  .e2e-inset {
-  //       margin-left: calc(var(--card-neg-space) + 0.5px);
-  //   }
-  // }
